# si4p

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/common/: entry.rs  level.rs  mod.rs  source.rs
src/database/: mod.rs
src/database/chip/: cmds.rs  fmls.rs  mnfs.rs  mod.rs  vars.rs
src/database/project/: cmds.rs  mod.rs
src/database/regex/: cmds.rs  mod.rs
src/database/theme/: cmds.rs  mod.rs
src/gui/: message.rs  mod.rs
src/gui/commands/: elf.rs  mod.rs  svd.rs
src/gui/common/: mod.rs  router.rs  widget.rs
src/gui/common/peripheral/: field.rs  mod.rs
src/gui/console/: entries.rs  event.rs  message.rs  mod.rs  theme.rs
src/gui/console.v2/: event.rs  message.rs  mod.rs  state.rs  theme.rs
src/gui/controller/: event.rs  mod.rs
src/gui/controller/cores/: event.rs  mod.rs  view.rs
src/gui/controller/peripherals/: container.rs  event.rs  mod.rs  register.rs
src/gui/left/: event.rs  mod.rs
src/gui/left/core/: event.rs  mod.rs  state.rs
src/gui/left/peripherals/: mod.rs  state.rs
src/gui/msg/: mod.rs
src/gui/msg/database/: mod.rs
src/gui/msg/global/: mod.rs
src/gui/msg/settings/: mod.rs
src/gui/msg/settings/theme/: mod.rs  tooltip.rs
src/gui/msg/theme/: mod.rs
src/gui/right/: event.rs  mod.rs
src/gui/right/device/: event.rs  mod.rs  state.rs
src/gui/right/elf/: event.rs  mod.rs
src/gui/selector/: message.rs  mod.rs
src/gui/selector/actions/: mod.rs  show.rs
src/gui/theme/: default-dark.ron  mod.rs
src/gui/theme/background/: mod.rs
src/gui/theme/border/: mod.rs
src/gui/theme/button/: mod.rs
src/gui/theme/textinput/: mod.rs
src/gui/theme/tooltip/: mod.rs
src/gui/usbcfg/: message.rs  mod.rs  target.rs  view.rs
src/gui/usbcfg/configuration/: defmt.rs  mod.rs  probe.rs
src/gui/usbcfg/probe/: mod.rs
src/gui/usbcfg/selector/: mod.rs  show.rs
src/gui/usbcfg/selector/view/: config.rs  device.rs  endpoint.rs  interface.rs  mod.rs
src/gui/views/: mod.rs
src/gui/views/database/: mod.rs
src/gui/views/database/project/: mod.rs  state.rs
src/gui/views/database/project/theme/: mod.rs  projectheader.rs  targetinfo.rs
src/gui/views/load/: mod.rs  state.rs
src/gui/views/probe/: common.rs  mod.rs  state.rs
src/gui/views/settings/: mod.rs
src/gui/views/settings/theme/: mod.rs
src/gui/widgets/: mod.rs  topbar.rs
src/gui/window/: mod.rs
src/gui/window/binary/: event.rs  mod.rs
src/gui/window/binary/inspection/: content.rs  mod.rs  views.rs
src/gui/window/binary/search/: mod.rs
src/gui/window/debug/: event.rs  mod.rs
src/guiv1/: mod.rs
src/guiv1/message/: elf.rs  mod.rs  probe.rs
src/guiv1/theme/: button.rs  container.rs  mod.rs  radio.rs  txt.rs
src/guiv1/view/: mod.rs  project.rs
src/guiv1/view/debug/: mod.rs  state.rs
src/guiv1/view/debug/theme/: mod.rs
src/guiv1/view/elf/: mod.rs
src/guiv1/view/elf/theme/: button.rs  mod.rs  row.rs  text.rs
src/init/: data.rs  mod.rs
src/log/: mod.rs  timereport.rs
src/probe/: mod.rs
src/project/: mod.rs
src/project/info/: mod.rs
src/usb/: command.rs  defmt.rs  elf.rs  hotplug.rs  mod.rs
src/usb/common/: mod.rs  target.rs
src/usb/device/: config.rs  endpoint.rs  interface.rs  mod.rs
src/usb/handle/: defmt.rs  mod.rs  probe.rs
