[package]
name = "defmthost"
version = "0.1.0"
edition = "2021"

exclude = ["./res"]


[dependencies]


# defmt dependencies
[dependencies.defmt-decoder]
version = "=0.3.7"
features = ["unstable"]

[dependencies.defmt-parser]
version = "=0.3.3"

[dependencies.rusb]
version = "=0.9.2"


# Graphics dependencies
[dependencies.iced]
version = "0.9"
optional = true
features = [
    "wgpu", "tokio", "system",
    "palette", "debug"
]

[dependencies.iced_native]
version = "0.10.3"
optional = true

[dependencies.marcel]
git = "https://github.com/micro-rust/marcel"
optional = true

[dependencies.rfd]
version = "0.11"
optional = true

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1"
features = [
    "rt", "sync", "fs", "io-util",
]


# Other dependencies
[dependencies.lazy_static]
version = "1"

[dependencies.seqid]
git = "https://github.com/micro-rust/seqid"



[features]

default = ["gui"]

# This feature indicates the application is built.
application = []

# This features indicates the application is built with a terminal UI.
tui = ["application"]

# This feature indicates the application is built with a graphical UI.
gui = ["application", "iced", "iced_native", "marcel", "ron", "rfd"]



[[bin]]
name = "defmthost"
required-features = ["application"]
