[package]
name = "si4p"
version = "0.1.0"
edition = "2021"

exclude = ["./res"]


[dependencies]


# defmt dependencies
[dependencies.defmt-decoder]
version = "=0.3.7"
features = ["unstable"]

[dependencies.defmt-parser]
version = "=0.3.3"

[dependencies.rusb]
version = "=0.9.2"


# Graphics dependencies
[dependencies.iced]
version = "0.10"
optional = true
features = [
    "wgpu", "tokio", "system",
    "palette", "debug", "lazy",
]

[dependencies.iced_native]
version = "0.10.3"
optional = true

[dependencies.marcel]
git = "https://github.com/micro-rust/marcel"
optional = true

[dependencies.rfd]
version = "0.11"
optional = true

[dependencies.probe-rs]
version = "0.19"

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1"
features = [
    "rt", "sync", "fs", "io-util",
]


# Other dependencies
[dependencies.dirs]
version = "1"

[dependencies.lazy_static]
version = "1"

[dependencies.seqid]
git = "https://github.com/micro-rust/seqid"

[dependencies.svd-parser]
version = "0.14"



[features]

default = ["gui"]

# This feature indicates the application is built.
application = []

# This features indicates the application is built with a terminal UI.
tui = ["application"]

# This feature indicates the application is built with a graphical UI.
gui = ["application", "iced", "iced_native", "marcel", "ron", "rfd"]



[[bin]]
name = "si4p"
required-features = ["application"]
